src/objects/Track__c.object
<CustomObject>
    <fields>
        <fullName>Artist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Artist</label>
        <referenceTo>Artist__c</referenceTo>
        <relationshipLabel>Tracks</relationshipLabel>
        <relationshipName>Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>artists__c</fullName>
        <label>artists</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>duration_ms__c</fullName>
        <label>duration_ms</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>images__c</fullName>
        <label>images</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>release_date__c</fullName>
        <label>release_date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Track</label>
    <nameField>
        <label>Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>